# extended-reality

./: .gitignore
lab2_anaglyph/: CMakeLists.txt
lab2_anaglyph/src/: anaglyph.cpp  box.frag  box.vert
lab2_anaglyph/src/models/: box.h
lab6_landmarking/myenv/Scripts/: capture.py
